--- a/LeafletBlazor-main/PinPoints/PinPoints.csproj
+++ b/LeafletBlazor-main/PinPoints/PinPoints.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.3" />
   </ItemGroup>
 
