--- a/LeafletBlazor-main/Services.PinPoints/Services.PinPoints.csproj
+++ b/LeafletBlazor-main/Services.PinPoints/Services.PinPoints.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\PinPoints\PinPoints.csproj" />
   </ItemGroup>
 
 </Project>
